k8s/templates/postgresql.yml
kind: Namespace
apiVersion: v1
metadata:
  name: psql
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: postgres9
  namespace: psql
spec:
  serviceName: "postgres"
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: postgres
        image: postgres:9.6
        ports:
        - containerPort: 5432
          name: db
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: pgdata
      annotations:
        volume.beta.kubernetes.io/storage-class: managed-nfs-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
