k8s/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: counter
  namespace: default
  labels:
    app: counter-service
spec:
  selector:
    app: counter
  ports:
  - port: 80
    targetPort: 8888
    protocol: TCP
