k8s/templates/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: counter-ingress
spec:
  rules:
  - host: ben.counter.io
    http:
      paths:
      - path: /
        backend:
          serviceName: counter-test
          servicePort: 80
